# redshift-migration-agent

./: .gitignore  AGENT_DEPLOYMENT_SUMMARY.md  AWS_QUICK_START.md  CHANGELOG.md  CHAT_GUIDE.md  CHAT_INTERFACE_READY.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  CONVERSATION_MANAGEMENT_FIX.md  DEPLOY.md  DEPLOYMENT_OPTIONS.md  DEPLOY_NOW.md  Dockerfile  GITHUB_SETUP_GUIDE.md  LICENSE  MAINTENANCE_SNAPSHOT_ADDED.md  MAKE_IT_PUBLIC.md  MEMORY_FEATURE_ADDED.md  MEMORY_SETUP_GUIDE.md  MERGE_SUMMARY.md  NAVIGATION.md  NEW_STRUCTURE.md  NEXT_STEPS.md  PERMISSIONS_FIXED.md  PROJECT_STRUCTURE.md  README.md  README_ORIGINAL.md  RELEASE_NOTES_v1.0.0.md  REORGANIZATION_COMPLETE.md  SCHEDULED_QUERIES_ADDED.md  SECURE_ACCESS.md  START_CHATTING.md  USAGE_LIMITS_ADDED.md  api_server.py  chat  chat.sh  chat_advanced.py  chat_with_agent.py  deploy  deploy_to_aws.sh  (+16 more)
.github/workflows/: test.yml
.hypothesis/constants/: 039fd395ff389595  056b6940fd5812f6  0df96fa1f9e3951f  14594811cce4ef00  201e81de839da7f0  2dab1e3304e00865  3bd22a5ed431e9b3  (+8 more)
aws_deploy/: deploy-to-ecs.sh  deploy-to-lambda.sh  ecs-task-definition.json  secure-access-setup.sh  task-role-policy.json
docs/: PARAMETER_GROUPS.md  QUICKSTART.md  SCHEDULED_QUERIES.md  WORKGROUP_CREATION.md
examples/: advanced_migration.py  agent_example.py  api_client_example.py  basic_migration.py  secure_client.py  simple_migration.py  snapshot_migration.py
scripts/: setup_memory.py
sdk/: elasticgumbyagenticmcp-1.0-py3-none-any.whl  elasticgumbymcppythonclient-1.0-py3-none-any.whl  elasticgumbyplatformpartnerbaseagent-1.0-py3-none-any.whl  mypy_boto3_elasticgumbyagenticservice-1.40.60-py3-none-any.whl
tests/: __init__.py  test_extractor.py  test_parameter_groups.py
(+176 files in other folders)
